--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,7 +129,8 @@ include_directories(
 # add_dependencies(ekf_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
- add_executable(ekf_test_node src/main.cpp)
+ add_executable(ekf_test_node src/test.cpp)
+ add_executable(EkfConverter src/ekfConverter.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -138,6 +139,10 @@ include_directories(
 ## Specify libraries to link a library or executable target against
  target_link_libraries(ekf_test_node
    ${catkin_LIBRARIES}
+ )
+  
+ target_link_libraries(EkfConverter
+  ${catkin_LIBRARIES}
  )
 
 #############
